--- a/src/components/contactForm/ContactForm.module.css
+++ b/src/components/contactForm/ContactForm.module.css
@@ -43,18 +43,14 @@ margin-bottom: 10px;
   min-width: 150px;
   height: 40px;
   border: 0px solid transparent;
-  border-radius: 4px;
-
-  color: #524e4e;
-  background-color: #f39521;
-
-  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-
-  opacity: 1;
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+ padding: 4px 14px;
+  background-image: radial-gradient(circle, rgba(237,23,0,1) 0%, rgba(204,174,23,1) 100%);
+  border-radius: 10px;
+  font-weight: 700;
+  color: rgb(255, 255, 255);
   cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.75) 2px 9px 14px 0px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
 }
 
 .button:hover,
