--- a/src/components/contactList/contactList.module.css
+++ b/src/components/contactList/contactList.module.css
@@ -12,8 +12,8 @@
 
 .contact {
   width: 100%;
-  margin-right: auto;
-  margin-left: auto;
+  /* margin-right: auto;
+  margin-left: auto; */
 
   }
 
@@ -79,4 +79,10 @@ margin-bottom: 20px;
   opacity: 0.8;
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.errorLi{
+  text-align: center;
+  color: #5db09d;
+  list-style: none;
 }
