--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f0f1f3;
   font-style: normal;
   line-height: 1.5;
+background-image: url(./components/img/BoddyFonpng.png)  ;
 }
 
 code {
@@ -42,6 +42,11 @@ li {
   margin: 0;
   padding: 0;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 
 .title {
   margin-bottom: 15px;
@@ -49,3 +54,7 @@ li {
   text-align: center;
 }
 
+.titleText {
+color: rgb(red, green, blue);
+
+}
